--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -111,21 +111,21 @@
             </Grid>
 
             <!-- release results -->
-            <!-- Expander IsExpanded="{Binding ShowResults}" Style="{StaticResource AnimatedExpander}">
+            <Expander IsExpanded="{Binding ShowResults}" Style="{StaticResource AnimatedExpander}">
                 <Grid Margin="-105,0,-10,0" Background="{StaticResource DarkBackgroundBrush}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="110" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <!- - close button - ->
+                    <!-- close button -->
                     <Button Command="{Binding CloseResults}" Style="{StaticResource IconButton}" Grid.Column="0" Width="40" Height="40" VerticalAlignment="Top" HorizontalAlignment="Left">
                         <c:IconControl Height="12" Width="12" Foreground="{StaticResource LabelTextBrush}" Data="{StaticResource IconClose}" />
                     </Button>
 
                     <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,5,10,5">
 
-                        <!- - no match found - ->
+                        <!-- no match found -->
                         <Grid Visibility="{Binding Path=HasResults, Converter={StaticResource TrueToCollapsed}}" Margin="0,5,10,5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -136,7 +136,7 @@
                             <Button Command="{Binding CloseResults}" Grid.Column="1" Style="{StaticResource ButtonSolidSmall}" Content="CLOSE" HorizontalAlignment="Right"/>
                         </Grid>
 
-                        <!- - result list - ->
+                        <!-- result list -->
                         <ItemsControl ItemsSource="{Binding IdentifiedReleases}" Visibility="{Binding Path=HasResults, Converter={StaticResource TrueToVisible}}" Margin="0,10,0,10">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
@@ -147,7 +147,7 @@
 
                     </StackPanel>
                 </Grid>
-            </-->
+            </Expander>
             <!--rx:ViewModelViewHost ViewModel="{Binding ReleaseResults}" Visibility="{Binding Path=ShowResults, Converter={StaticResource TrueToVisible}}" HorizontalContentAlignment="Stretch" /-->
 
             <!-- separator -->
