--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -29,8 +29,8 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <!--c:CachedImage ImageUrl="{Binding Game.File.Thumb.Url}" Width="70" Height="70"
-                    Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" /-->
+        <c:CachedImage ImageUrl="{Binding Game.MappedFile.Thumb.Url}" Width="70" Height="70"
+                    Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" />
 
         <StackPanel Grid.Column="1" Orientation="Vertical">
 
@@ -48,26 +48,26 @@
                 </Label>
 
                 <!-- controls -->
-                <!--StackPanel Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}" Grid.Column="2" Orientation="Horizontal" Margin="0,5,0,0">
-                    <c:IconControl Foreground="{Binding Path=Game.Release.Starred, Converter={StaticResource TrueToPrimary}}" 
+                <StackPanel Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}" Grid.Column="2" Orientation="Horizontal" Margin="0,5,0,0">
+                    <c:IconControl Foreground="{Binding Path=Game.MappedRelease.Starred, Converter={StaticResource TrueToPrimary}}" 
                                    Data="{StaticResource IconStar}" Height="18" Width="18" Margin="10,-2,12,0"/>
-                    <ToggleButton Command="{Binding SyncToggled}" IsChecked="{Binding Game.IsSynced}" 
+                    <ToggleButton Command="{Binding SyncToggled}" IsChecked="{Binding Game.Mapping.IsSynced}" 
                                   x:Name="SyncButton" Height="20" Margin="5,0,17,0"/>
                     <c:LabelFor Target="{x:Reference SyncButton}" Foreground="{Binding ElementName=SyncButton, Path=Background}" 
                                 Content="SYNC" FontSize="15" Margin="0,0,10,0" />
-                </-->
+                </StackPanel>
             </Grid>
 
             <!-- second row -->
-            <!--TextBlock Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}"
+            <TextBlock Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}"
                        Style="{StaticResource Label}" Margin="5,0,0,-5">
                 <TextBlock.Inlines>
-                    <Run Text="{Binding Path=Game.Release.Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Run Text="{Binding Game.Version.Name}" FontWeight="Bold"/>
+                    <Run Text="{Binding Path=Game.MappedRelease.Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Run Text="{Binding Game.MappedVersion.Name}" FontWeight="Bold"/>
                     <Run Text=" by" FontStyle="Italic"/>
-                    <Run Text="{Binding Path=Game.Release.AuthorNames, Mode=OneWay}" FontStyle="Italic"/>
+                    <Run Text="{Binding Path=Game.MappedRelease.AuthorNames, Mode=OneWay}" FontStyle="Italic"/>
                 </TextBlock.Inlines>
-            </TextBlock-->
+            </TextBlock>
             
             <!-- third row -->
             <Grid Margin="0,0,0,10">
