--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -29,8 +29,8 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <c:CachedImage ImageUrl="{Binding Game.MappedFile.Thumb.Url}" Width="70" Height="70"
-                    Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" />
+        <!--c:CachedImage ImageUrl="{Binding Game.MappedFile.Thumb.Url}" Width="70" Height="70"
+                    Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" /-->
 
         <StackPanel Grid.Column="1" Orientation="Vertical">
 
@@ -43,8 +43,10 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- title -->
-                <Label Grid.Column="0" Margin="0,0,0,-10" Grid.ColumnSpan="2" Visibility="{Binding Path=Game.HasXmlGame, Converter={StaticResource TrueToVisible}}">
-                    <TextBlock Text="{Binding Game.XmlGame.Description}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
+                <Label Grid.Column="0" Margin="0,0,0,-10" Grid.ColumnSpan="2" 
+                       Visibility="{Binding Path=Game.HasXmlGame, Converter={StaticResource TrueToVisible}}">
+                    <TextBlock Text="{Binding Game.XmlGame.Description}" TextTrimming="CharacterEllipsis" 
+                               FontSize="22" FontWeight="Bold" />
                 </Label>
 
                 <!-- controls -->
