--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -18,6 +18,7 @@
     <UserControl.Resources>
         <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
         <typeConverters:BooleanToVisibilityConverter x:Key="TrueToCollapsed" True="Collapsed" False="Visible" />
+        <typeConverters:NullToVisibilityConverter x:Key="NullToCollapsed" NotNull="Visible" Null="Collapsed"/>
         <typeConverters:BooleanToBrushConverter x:Key="FalseToRed" True="Transparent" False="DarkRed" />
         <typeConverters:BooleanToBrushConverter x:Key="TrueToPrimary" True="{StaticResource PrimaryColorBrush}" False="{StaticResource LabelTextBrush}" />
         <valueConverters:DebugDataBindingConverter x:Key="DebugBinding"/>
@@ -29,8 +30,9 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <!--c:CachedImage ImageUrl="{Binding Game.MappedFile.Thumb.Url}" Width="70" Height="70"
-                    Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" /-->
+        <c:CachedImage ImageUrl="{Binding Game.MappedFile.Thumb.Url}" Width="70" Height="70"
+                       Visibility="{Binding Path=Game.MappedFile, Converter={StaticResource NullToCollapsed}}"
+                       Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" />
 
         <StackPanel Grid.Column="1" Orientation="Vertical">
 
@@ -44,13 +46,14 @@
 
                 <!-- title -->
                 <Label Grid.Column="0" Margin="0,0,0,-10" Grid.ColumnSpan="2" 
-                       Visibility="{Binding Path=Game.HasXmlGame, Converter={StaticResource TrueToVisible}}">
-                    <TextBlock Text="{Binding Game.XmlGame.Description}" TextTrimming="CharacterEllipsis" 
+                       Visibility="{Binding Path=Game.Description, Converter={StaticResource NullToCollapsed}}">
+                    <TextBlock Text="{Binding Game.Description}" TextTrimming="CharacterEllipsis" 
+                               Background="{Binding Path=Game.HasXmlGame, Converter={StaticResource FalseToRed}}"
                                FontSize="22" FontWeight="Bold" />
                 </Label>
 
                 <!-- controls -->
-                <StackPanel Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}" Grid.Column="2" Orientation="Horizontal" Margin="0,5,0,0">
+                <StackPanel Visibility="{Binding Path=Game.MappedFile, Converter={StaticResource NullToCollapsed}}" Grid.Column="2" Orientation="Horizontal" Margin="0,5,0,0">
                     <c:IconControl Foreground="{Binding Path=Game.MappedRelease.Starred, Converter={StaticResource TrueToPrimary}}" 
                                    Data="{StaticResource IconStar}" Height="18" Width="18" Margin="10,-2,12,0"/>
                     <ToggleButton Command="{Binding SyncToggled}" IsChecked="{Binding Game.Mapping.IsSynced}" 
@@ -61,7 +64,7 @@
             </Grid>
 
             <!-- second row -->
-            <TextBlock Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}"
+            <TextBlock Visibility="{Binding Path=Game.MappedFile, Converter={StaticResource NullToCollapsed}}"
                        Style="{StaticResource Label}" Margin="5,0,0,-5">
                 <TextBlock.Inlines>
                     <Run Text="{Binding Path=Game.MappedRelease.Name, UpdateSourceTrigger=PropertyChanged}"/>
