--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -101,7 +101,7 @@
                         Content="ADD TO DB" HorizontalAlignment="Right" Margin="0,-3,10,-8"/>
 
                     <!-- remove from db button -->
-                    <Button
+                    <Button Command="{Binding RemoveGame}"
                         Visibility="{Binding Path=ShowRemoveFromDbButton, Converter={StaticResource TrueToVisible}}" 
                         Style="{StaticResource ButtonLine}" 
                         Content="REMOVE FROM DB" HorizontalAlignment="Right" Margin="0,-3,10,-8"/>
