--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -86,6 +86,12 @@
                     <TextBlock Text="{Binding Game.FileDisplayName}" Background="{Binding Path=Game.HasLocalFile, Converter={StaticResource FalseToRed}}" TextTrimming="CharacterEllipsis"/>
                 </Label>
 
+                <!-- download progress -->
+                <ProgressBar Value="{Binding Path=DownloadPercent, Mode=OneWay}" Style="{StaticResource BlehProgressBar}" 
+                             Visibility="{Binding Path=Game.IsDownloading, Converter={StaticResource TrueToVisible}}"
+                             Grid.Column="1" Margin="0,5,15,0" IsIndeterminate="False"/>
+                
+                <!-- buttons -->
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
 
                     <!-- download button -->
