--- a/VpdbAgent/Views/Games/GamesView.xaml
+++ b/VpdbAgent/Views/Games/GamesView.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:ctrl="clr-namespace:VpdbAgent.Controls"
-      xmlns:models="clr-namespace:VpdbAgent.PinballX.Models"
+      xmlns:games="clr-namespace:VpdbAgent.ViewModels.Games"
       mc:Ignorable="d" 
       d:DesignHeight="300"
 	  d:DesignWidth="900">
@@ -20,43 +20,55 @@
         <StackPanel Grid.Column="0" Orientation="Vertical">
             
             <!-- SYSTEMS -->
-            <Label Content="SYSTEMS" Style="{StaticResource Header3}" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="35" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="SYSTEMS" Style="{StaticResource Header3}" />
+               
+            </Grid>
             <ItemsControl x:Name="SystemList">
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="models:PinballXSystem">
+                    <DataTemplate DataType="games:SystemItemViewModel">
                         <StackPanel Orientation="Vertical">
-                            <CheckBox IsChecked="True" Tag="{Binding Name}"
-                                      Content="{Binding Name}"
+                            <CheckBox IsChecked="True" Tag="{Binding System.Name}"
+                                      Content="{Binding System.Name}"
                                       Checked="OnPlatformFilterChanged" Unchecked="OnPlatformFilterChanged"
                                       Margin="5,5,0,0" FontSize="18"/>
 
-                            <!-- DB FILES -->
-                            <Label Content="XML Files" Margin="15,0,0,0" />
-                            <ItemsControl ItemsSource="{Binding DatabaseFiles}">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <CheckBox IsChecked="True" Tag="{Binding}"
-                                          Content="{Binding}"
-                                          Checked="OnExecutableFilterChanged" Unchecked="OnExecutableFilterChanged"
-                                          Margin="15,5,0,0" FontSize="18"/>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                            
-                            <!-- EXECUTABLES -->
-                            <Label Content="Executables" Margin="15,0,0,0" />
-                            <ItemsControl ItemsSource="{Binding Executables}">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <CheckBox IsChecked="True" Tag="{Binding}"
-                                          Content="{Binding}"
-                                          Checked="OnExecutableFilterChanged" Unchecked="OnExecutableFilterChanged"
-                                          Margin="15,5,0,0" FontSize="18"/>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                        </StackPanel>
+                            <Expander IsExpanded="{Binding IsExpanded}" Style="{StaticResource AnimatedExpander}">
 
+                                <StackPanel Orientation="Vertical">
+
+                                    <!-- DB FILES -->
+                                    <Label Content="XML Files" Margin="15,0,0,0" />
+                                    <ItemsControl ItemsSource="{Binding System.DatabaseFiles}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <CheckBox IsChecked="True" Tag="{Binding}"
+                                              Content="{Binding}"
+                                              Checked="OnExecutableFilterChanged" Unchecked="OnExecutableFilterChanged"
+                                              Margin="15,5,0,0" FontSize="18"/>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+
+                                    <!-- EXECUTABLES -->
+                                    <Label Content="Executables" Margin="15,0,0,0" />
+                                    <ItemsControl ItemsSource="{Binding System.Executables}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <CheckBox IsChecked="True" Tag="{Binding}"
+                                              Content="{Binding}"
+                                              Checked="OnExecutableFilterChanged" Unchecked="OnExecutableFilterChanged"
+                                              Margin="15,5,0,0" FontSize="18"/>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Expander>
+                        </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
