Added filter by files not in database.

--- a/VpdbAgent/Views/Games/GamesView.xaml
+++ b/VpdbAgent/Views/Games/GamesView.xaml
@@ -29,6 +29,12 @@
                
             </Grid>
             <ItemsControl x:Name="SystemList" />
+            
+            <!-- SHOW -->
+            <Label Content="SHOW" Style="{StaticResource Header3}" Margin="0,15,0,0" />
+            <CheckBox Name="ShowFilesNotInDatabase" Content="Files not in DB" IsChecked="True" 
+                      Margin="5,5,0,0" FontSize="18"/>
+
 
             <!-- ACTIONS -->
             <Label Content="ACTIONS" Style="{StaticResource Header3}" Margin="0,15,0,0" />
